# VideoEdit

./: rc.keystory  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ruanchao/videoedit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_cmd.c  ffmpeg_cmd_utils.c
app/src/main/cpp/ffmpeg/include/: cmdutils.c  cmdutils.h  config.h  ffmpeg.c
app/src/main/cpp/ffmpeg/include/doc/: config.texi
app/src/main/cpp/ffmpeg/include/ffbuild/: config.fate  config.mak  config.sh
app/src/main/cpp/ffmpeg/include/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_fixed.d  aacps_float.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  aasc.d  ac3.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  acelp_filters.d  acelp_pitch_delay.d  acelp_vectors.d  adpcm.d  adpcmenc.d  adts_header.d  (+650 more)
app/src/main/cpp/ffmpeg/include/libavdevice/: alldevices.d  avdevice.d  fbdev_common.d  fbdev_dec.d  fbdev_enc.d  lavfi.d  libavdevice.pc  utils.d  v4l2-common.d  v4l2.d  v4l2enc.d
app/src/main/cpp/ffmpeg/include/libavfilter/: aeval.d  af_acontrast.d  af_acopy.d  af_acrusher.d  af_adelay.d  af_aecho.d  af_aemphasis.d  af_afade.d  af_afftfilt.d  af_afir.d  af_aformat.d  af_agate.d  af_aiir.d  af_alimiter.d  af_amerge.d  af_amix.d  af_anequalizer.d  af_anull.d  af_apad.d  af_aphaser.d  af_apulsator.d  af_aresample.d  af_asetnsamples.d  af_asetrate.d  af_ashowinfo.d  af_astats.d  af_atempo.d  af_biquads.d  af_channelmap.d  af_channelsplit.d  (+208 more)
app/src/main/cpp_old/: ffmpeg_cmd.c
app/src/main/res/drawable/: edit_bg_shape.xml  edit_bg_shape_click.xml  edit_bg_shape_no_choose.xml  radiobutton_image_effect.xml  record_bg_selector.xml  recycleview_divicer.xml  sw_down_refresh_loading.xml  sw_recycleview_divicer.xml
app/src/main/res/layout/: activity_add_water.xml  activity_choose_video.xml  activity_main.xml  activity_media_codec_record.xml  activity_music_list.xml  activity_record.xml  activity_record2.xml  activity_splash.xml  activity_test.xml  activity_video_box_list.xml  activity_video_edit.xml  activity_video_edit_tool.xml  activity_video_play.xml  activity_video_show.xml  add_bg_music_layout.xml  add_water_layout.xml  bottom_dialog_layout.xml  data_list_item_layout.xml  edited_main_title_layout.xml  edited_vidoe_layout.xml  filter_item_layout.xml  filter_view_layout.xml  fragment_video_list_layout.xml  gridview_fast_tool_item_layout.xml  image_to_video_layout.xml  main_banner_layout.xml  main_grid_all_layout.xml  main_grid_layout.xml  material_layout.xml  music_item_layout.xml  sw_view_empty.xml  sw_view_loading.xml  sw_view_nonet.xml  sw_view_retry.xml  video_format_change_layout.xml  video_list_item_layout.xml  video_list_layout.xml  video_menu_layout.xml  video_to_gif_layout.xml
app/src/main/res/menu/: video_edit_menu.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
(+604 files in other folders)
